rick_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-deployment
  labels:
    app: rick
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick
  template:
    metadata:
      labels:
        app: rick
    spec:
      containers:
      - name: rick
        image: seckinozden/rick:0.3
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
